# Tatris_CPP_SDL2

./: CMakeLists.txt  README.txt
include/: Project.h  TxUtils.h  font.h  loop.h  render.h  score.h  sound2.h
src/: TxUtils.cpp  font.cpp  loop.cpp  main.cpp  project.cpp  render.cpp  score.cpp  sound.cpp
